@@ -1,3 +1,9 @@
+2011-10-05  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tkWinInt.h:   Remove tclWinProcs, as it is no longer
+	* generic/tkWinX.c:     being used.
+	* generic/tkWinTest.c:
+
 2011-09-27  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tkImgPNG.c (WriteExtraChunks): [Bug 3405839]: Write the sDAT
